--- a/kubernetes/core/network/external-dns/pihole/helmrelease.yaml
+++ b/kubernetes/core/network/external-dns/pihole/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
 
     serviceMonitor:
       enabled: true
-      namespace: monitoring
+      namespace: observability
 
     logLevel: debug
     triggerLoopOnEvent: true
