--- a/kubernetes/core/observability/silence-operator/ks.yaml
+++ b/kubernetes/core/observability/silence-operator/ks.yaml
@@ -3,47 +3,38 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core-external-dns-pihole
-  namespace: &namespace network
+  name: core-silence-operator
+  namespace: &namespace observability
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: external-dns
-      app.kubernetes.io/instance: pihole
+      app.kubernetes.io/name: silence-operator
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/core/network/external-dns/pihole
+  path: ./kubernetes/core/observability/silence-operator/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: homelab
     namespace: flux-system
   wait: true
-  dependsOn:
-    - name: core-external-secrets-secretstore
-      namespace: security
-    - name: core-prometheus-operator-crds
-      namespace: observability
-    - name: core-external-dns-cloudflare
-
 
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core-external-dns-cloudflare
-  namespace: &namespace network
+  name: core-silence-operator-silences
+  namespace: &namespace observability
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: external-dns
-      app.kubernetes.io/instance: cloudflare
+      app.kubernetes.io/name: silence-operator
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/core/network/external-dns/cloudflare
+  path: ./kubernetes/core/observability/silence-operator/silences
   prune: true
   sourceRef:
     kind: GitRepository
@@ -51,7 +42,4 @@ spec:
     namespace: flux-system
   wait: true
   dependsOn:
-    - name: core-external-secrets-secretstore
-      namespace: security
-    - name: core-prometheus-operator-crds
-      namespace: observability
+    - name: core-silence-operator
