--- a/kubernetes/flux/components/keda/nas-nfs-scaler/scaledobject.yaml
+++ b/kubernetes/flux/components/keda/nas-nfs-scaler/scaledobject.yaml
@@ -16,7 +16,7 @@ spec:
   triggers:
     - type: prometheus
       metadata:
-        serverAddress: http://prometheus-operated.monitoring.svc.cluster.local:9090
+        serverAddress: http://prometheus-operated.observability.svc.cluster.local:9090
         query: probe_success{instance=~"lilnas.home.arpa:2049"}
         threshold: "1"
         ignoreNullValues: "0"
