--- a/kubernetes/apps/games/minecraft/app/probe.yaml
+++ b/kubernetes/apps/games/minecraft/app/probe.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   module: tcp_connect
   prober:
-    url: blackbox-exporter.monitoring.svc.cluster.local:9115
+    url: blackbox-exporter.observability.svc.cluster.local:9115
   targets:
     staticConfig:
       static:
