--- a/kubernetes/apps/observability/kromgo/ks.yaml
+++ b/kubernetes/apps/observability/kromgo/ks.yaml
@@ -3,22 +3,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core-node-feature-discovery
-  namespace: flux-system
+  name: app-kromgo
+  namespace: &namespace observability
 spec:
-  targetNamespace: system
+  targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: node-feature-discovery
+      app.kubernetes.io/name: kromgo
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/core/system/node-feature-discovery/app
+  path: ./kubernetes/apps/observability/kromgo/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: homelab
     namespace: flux-system
   wait: true
-  dependsOn:
-    - name: core-prometheus-operator-crds
-      namespace: observability
