--- a/kubernetes/core/network/external-dns/cloudflare/helmrelease.yaml
+++ b/kubernetes/core/network/external-dns/cloudflare/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
 
     serviceMonitor:
       enabled: true
-      namespace: monitoring
+      namespace: observability
 
     logLevel: debug
     triggerLoopOnEvent: true
