--- a/kubernetes/core/observability/grafana/ks.yaml
+++ b/kubernetes/core/observability/grafana/ks.yaml
@@ -3,16 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core-node-feature-discovery
-  namespace: flux-system
+  name: core-grafana
+  namespace: &namespace observability
 spec:
-  targetNamespace: system
+  targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: node-feature-discovery
+      app.kubernetes.io/name: &app grafana
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/core/system/node-feature-discovery/app
+  path: ./kubernetes/core/observability/grafana/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -20,5 +20,11 @@ spec:
     namespace: flux-system
   wait: true
   dependsOn:
+    - name: core-kube-prometheus-stack
     - name: core-prometheus-operator-crds
-      namespace: observability
+  components:
+    - ../../../../flux/components/sso-secret
+  postBuild:
+    substitute:
+      APP: *app
+      OAUTH_SECRET_KEY_NAME: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
