--- a/.mise.toml
+++ b/.mise.toml
@@ -4,8 +4,8 @@ experimental = true # for uv_venv_auto
 python.uv_venv_auto = true
 
 [env]
-KUBECONFIG = "{{ config_root }}/kubernetes/kubeconfig"
-TALOSCONFIG = "{{ config_root }}/kubernetes/talos/talosconfig"
+KUBECONFIG = "{{ config_root }}/cluster/kubernetes/kubeconfig"
+TALOSCONFIG = "{{ config_root }}/cluster/talos/talosconfig"
 MINIJINJA_CONFIG_FILE="{{ config_root }}/.github/.minijinja.toml"
 HOMEBREW_BREWFILE="{{ config_root }}/.github/Brewfile"
 _.path = ['{{config_root}}/node_modules/.bin']
