--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
     "mrmlnc.vscode-json5",
+    "nefrob.vscode-just-syntax",
     "redhat.vscode-yaml",
     "tamasfe.even-better-toml"
   ],
