--- a/cluster/kubernetes/apps/ci/kustomization.yaml
+++ b/cluster/kubernetes/apps/ci/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./actions-runner-controller/ks.yaml
   - ./renovate-operator/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
