--- a/cluster/kubernetes/apps/games/kustomization.yaml
+++ b/cluster/kubernetes/apps/games/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./romm/ks.yaml
   - ./vintagestory/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
