--- a/cluster/kubernetes/apps/home/kustomization.yaml
+++ b/cluster/kubernetes/apps/home/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./go-tapo-exporter/ks.yaml
   - ./home-assistant/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
