--- a/cluster/kubernetes/apps/selfhosted/kustomization.yaml
+++ b/cluster/kubernetes/apps/selfhosted/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   - ./mealie/ks.yaml
   - ./stirling-pdf/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
