--- a/cluster/kubernetes/core/crossplane-system/kustomization.yaml
+++ b/cluster/kubernetes/core/crossplane-system/kustomization.yaml
@@ -6,4 +6,4 @@ namespace: crossplane-system
 resources:
   - ./crossplane/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
