--- a/cluster/kubernetes/core/security/kustomization.yaml
+++ b/cluster/kubernetes/core/security/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./external-secrets/ks.yaml
   - ./glauth/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
