--- a/cluster/kubernetes/core/cert-manager/kustomization.yaml
+++ b/cluster/kubernetes/core/cert-manager/kustomization.yaml
@@ -6,4 +6,4 @@ namespace: cert-manager
 resources:
   - ./cert-manager/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
