--- a/cluster/kubernetes/core/database/kustomization.yaml
+++ b/cluster/kubernetes/core/database/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./crunchy-postgres/ks.yaml
   - ./dragonfly/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
