--- a/cluster/kubernetes/core/network/kustomization.yaml
+++ b/cluster/kubernetes/core/network/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - ./external-dns/ks.yaml
   - ./smtp-relay/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
