--- a/cluster/kubernetes/core/observability/kustomization.yaml
+++ b/cluster/kubernetes/core/observability/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - ./silence-operator/ks.yaml
   - ./smartctl-exporter/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
 patches:
   - patch: |
       - op: add
