--- a/cluster/kubernetes/core/storage/kustomization.yaml
+++ b/cluster/kubernetes/core/storage/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
 patches:
   - patch: |
       - op: add
