--- a/cluster/kubernetes/core/system/kustomization.yaml
+++ b/cluster/kubernetes/core/system/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
 components:
-  - ../../componentsnamespace
+  - ../../components/namespace
 patches:
   - patch: |
       - op: add
