--- a/cluster/kubernetes/apps/ci/kustomization.yaml
+++ b/cluster/kubernetes/apps/ci/kustomization.yaml
@@ -4,7 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: ci
 resources:
+  - ./namespace.yaml
   - ./actions-runner-controller/ks.yaml
   - ./renovate-operator/ks.yaml
-components:
-  - ../../components/namespace
