--- a/cluster/kubernetes/apps/downloads/kustomization.yaml
+++ b/cluster/kubernetes/apps/downloads/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: downloads
 resources:
+  - ./namespace.yaml
   - ./externalsecret.yaml
   - ./bazarr/ks.yaml
   - ./prowlarr/ks.yaml
@@ -13,5 +14,3 @@ resources:
   - ./scraparr/ks.yaml
   - ./slskd/ks.yaml
   - ./sonarr/ks.yaml
-components:
-  - ../../components/namespace
