--- a/cluster/kubernetes/apps/games/kustomization.yaml
+++ b/cluster/kubernetes/apps/games/kustomization.yaml
@@ -4,8 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: games
 resources:
+  - ./namespace.yaml
   - ./minecraft/ks.yaml
   - ./romm/ks.yaml
   - ./vintagestory/ks.yaml
-components:
-  - ../../components/namespace
