--- a/cluster/kubernetes/apps/jobs/kustomization.yaml
+++ b/cluster/kubernetes/apps/jobs/kustomization.yaml
@@ -4,6 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: jobs
 resources:
+  - ./namespace.yaml
   - ./lge-dev-renew/ks.yaml
-components:
-  - ../../components/namespace
