--- a/cluster/kubernetes/apps/selfhosted/kustomization.yaml
+++ b/cluster/kubernetes/apps/selfhosted/kustomization.yaml
@@ -4,11 +4,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: selfhosted
 resources:
+  - ./namespace.yaml
   - ./actual/ks.yaml
   - ./cyberchef/ks.yaml
   - ./homepage/ks.yaml
   - ./karakeep/ks.yaml
   - ./mealie/ks.yaml
   - ./stirling-pdf/ks.yaml
-components:
-  - ../../components/namespace
