--- a/cluster/kubernetes/apps/web/kustomization.yaml
+++ b/cluster/kubernetes/apps/web/kustomization.yaml
@@ -4,6 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: web
 resources:
+  - ./namespace.yaml
   - tof-tl/ks.yaml
-components:
-  - ../../components/namespace
