--- a/cluster/kubernetes/core/cert-manager/kustomization.yaml
+++ b/cluster/kubernetes/core/cert-manager/kustomization.yaml
@@ -4,6 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 resources:
+  - ./namespace.yaml
   - ./cert-manager/ks.yaml
-components:
-  - ../../components/namespace
