--- a/cluster/kubernetes/core/crossplane-system/kustomization.yaml
+++ b/cluster/kubernetes/core/crossplane-system/kustomization.yaml
@@ -4,6 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: crossplane-system
 resources:
+  - ./namespace.yaml
   - ./crossplane/ks.yaml
-components:
-  - ../../components/namespace
