--- a/cluster/kubernetes/core/database/kustomization.yaml
+++ b/cluster/kubernetes/core/database/kustomization.yaml
@@ -4,7 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: database
 resources:
+  - ./namespace.yaml
   - ./crunchy-postgres/ks.yaml
   - ./dragonfly/ks.yaml
-components:
-  - ../../components/namespace
