--- a/cluster/kubernetes/core/network/kustomization.yaml
+++ b/cluster/kubernetes/core/network/kustomization.yaml
@@ -4,10 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: network
 resources:
+  - ./namespace.yaml
   - ./cf-dyndns/ks.yaml
   - ./cloudflared/ks.yaml
   - ./envoy-gateway/ks.yaml
   - ./external-dns/ks.yaml
   - ./smtp-relay/ks.yaml
-components:
-  - ../../components/namespace
