--- a/cluster/kubernetes/core/observability/kustomization.yaml
+++ b/cluster/kubernetes/core/observability/kustomization.yaml
@@ -4,19 +4,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
 resources:
+  - ./namespace.yaml
   - ./blackbox-exporter/ks.yaml
   - ./grafana/ks.yaml
-  - ./keda/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./prometheus-operator/ks.yaml
   - ./silence-operator/ks.yaml
   - ./smartctl-exporter/ks.yaml
-components:
-  - ../../components/namespace
-patches:
-  - patch: |
-      - op: add
-        path: /metadata/labels/pod-security.kubernetes.io~1enforce
-        value: privileged
-    target:
-      kind: Namespace
