--- a/cluster/kubernetes/core/security/kustomization.yaml
+++ b/cluster/kubernetes/core/security/kustomization.yaml
@@ -4,8 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: security
 resources:
+  - ./namespace.yaml
   - ./authelia/ks.yaml
   - ./external-secrets/ks.yaml
   - ./glauth/ks.yaml
-components:
-  - ../../components/namespace
