--- a/cluster/kubernetes/core/storage/kustomization.yaml
+++ b/cluster/kubernetes/core/storage/kustomization.yaml
@@ -4,15 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
 resources:
+  - ./namespace.yaml
   - ./dcsi-localpath/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
-components:
-  - ../../components/namespace
-patches:
-  - patch: |
-      - op: add
-        path: /metadata/labels/pod-security.kubernetes.io~1enforce
-        value: privileged
-    target:
-      kind: Namespace
