--- a/cluster/kubernetes/core/storage/namespace.yaml
+++ b/cluster/kubernetes/core/storage/namespace.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: not-used
+  name: _
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
     goldilocks.fairwinds.com/enabled: "true"
+    pod-security.kubernetes.io~1enforce: privileged
