--- a/cluster/kubernetes/core/system/kustomization.yaml
+++ b/cluster/kubernetes/core/system/kustomization.yaml
@@ -4,17 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: system
 resources:
-  - ./intel-device-plugins/ks.yaml
+  - ./namespace.yaml
   - ./k8tz/ks.yaml
+  - ./keda/ks.yaml
   - ./ksgate/ks.yaml
-  - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
-components:
-  - ../../components/namespace
-patches:
-  - patch: |
-      - op: add
-        path: /metadata/labels/pod-security.kubernetes.io~1enforce
-        value: privileged
-    target:
-      kind: Namespace
