--- a/cluster/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/cluster/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -48,8 +48,9 @@ spec:
           reloader.stakater.com/auto: "true"
 
         pod:
-          nodeSelector:
-            intel.feature.node.kubernetes.io/gpu: "true"
+          resourceClaims:
+            - name: gpu
+              resourceClaimTemplateName: jellyfin-gpu
 
         containers:
           app:
@@ -77,13 +78,13 @@ spec:
               startup:
                 enabled: false
             resources:
+              claims:
+                - name: gpu
               requests:
-                gpu.intel.com/i915: 1
                 cpu: 100m
                 memory: 512Mi
               limits:
-                gpu.intel.com/i915: 1
-                memory: 4Gi
+                memory: 6Gi
 
           exporter:
             image:
