--- a/cluster/kubernetes/core/kube-system/intel-gpu-resource-driver/app/kustomization.yaml
+++ b/cluster/kubernetes/core/kube-system/intel-gpu-resource-driver/app/kustomization.yaml
@@ -2,10 +2,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kube-system
 resources:
-  - ./namespace.yaml
-  - ./cilium/ks.yaml
-  - ./coredns/ks.yaml
-  - ./intel-gpu-resource-driver/ks.yaml
-  - ./metrics-server/ks.yaml
+  - ./ocirepository.yaml
+  - ./helmrelease.yaml
