fix local-hostpath location

--- a/cluster/kubernetes/core/storage/dcsi-localpath/app/helmrelease.yaml
+++ b/cluster/kubernetes/core/storage/dcsi-localpath/app/helmrelease.yaml
@@ -72,7 +72,7 @@ spec:
       config:
         driver: local-hostpath
         local-hostpath:
-          shareBasePath: &storagePath /var/lib/csi-local-hostpath
+          shareBasePath: &storagePath /var/mnt/local-hostpath
           controllerBasePath: *storagePath
           dirPermissionsMode: "0770"
           dirPermissionsUser: 0
