--- a/cluster/kubernetes/core/observability/grafana/ks.yaml
+++ b/cluster/kubernetes/core/observability/grafana/ks.yaml
@@ -23,7 +23,7 @@ spec:
     - name: core-kube-prometheus-stack
     - name: core-prometheus-operator-crds
   components:
-    - ../../../../componentssso-secret
+    - ../../../../components/sso-secret
   postBuild:
     substitute:
       APP: *app
