--- a/cluster/kubernetes/core/system-upgrade/tuppr/upgrades/kustomization.yaml
+++ b/cluster/kubernetes/core/system-upgrade/tuppr/upgrades/kustomization.yaml
@@ -2,7 +2,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: system-upgrade
 resources:
-  - ./namespace.yaml
-  - ./tuppr/ks.yaml
+  - ./kubernetes.yaml
+  - ./talos.yaml
