rejig envoy gateway setup

--- a/cluster/kubernetes/core/network/envoy-gateway/app/helmrelease.yaml
+++ b/cluster/kubernetes/core/network/envoy-gateway/app/helmrelease.yaml
@@ -21,5 +21,10 @@ spec:
   values:
     config:
       envoyGateway:
-        gateway:
-          controllerName: gateway.envoyproxy.io/gatewayclass-controller
+        extensionApis:
+          enableBackend: true
+        provider:
+          type: Kubernetes
+          kubernetes:
+            deploy:
+              type: GatewayNamespace
