--- a/cluster/kubernetes/core/network/envoy-gateway/app/ocirepository.yaml
+++ b/cluster/kubernetes/core/network/envoy-gateway/app/ocirepository.yaml
@@ -2,13 +2,12 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: OCIRepository
 metadata:
-  name: envoy-gateway-operator
+  name: envoy-gateway
 spec:
-  interval: 30m
-  timeout: 60s
-  url: oci://docker.io/envoyproxy/gateway-helm
-  ref:
-    tag: 1.7.0
+  interval: 15m
   layerSelector:
     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
     operation: copy
+  ref:
+    tag: 1.7.0
+  url: oci://mirror.gcr.io/envoyproxy/gateway-helm
