--- a/cluster/kubernetes/core/network/envoy-gateway/gateway/kustomization.yaml
+++ b/cluster/kubernetes/core/network/envoy-gateway/gateway/kustomization.yaml
@@ -3,5 +3,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./gateway.yaml
-  - ./redirect.yaml
+  - ./certificate.yaml
+  - ./envoy.yaml
+  - ./external.yaml
+  - ./https-redirect.yaml
+  - ./internal.yaml
+  - ./podmonitor.yaml
