--- a/cluster/kubernetes/core/network/envoy-gateway/ks.yaml
+++ b/cluster/kubernetes/core/network/envoy-gateway/ks.yaml
@@ -3,75 +3,41 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core-envoy-gateway-operator
+  name: core-envoy-gateway
   namespace: &namespace network
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: envoy-gateway-operator
+      app.kubernetes.io/name: envoy-gateway
       app.kubernetes.io/part-of: envoy-gateway
-      app.kubernetes.io/component: operator
   interval: 30m
   retryInterval: 2m
   timeout: 5m
   prune: true
-  path: ./cluster/kubernetes/core/network/envoy-gateway/operator
+  path: ./cluster/kubernetes/core/network/envoy-gateway/app
   sourceRef:
     kind: GitRepository
     name: homelab
     namespace: flux-system
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2
-      kind: HelmRelease
-      name: envoy-gateway-operator
-      namespace: *namespace
-    - apiVersion: gateway.networking.k8s.io/v1
-      kind: GatewayClass
-      name: envoy-gateway
-  # healthCheckExprs:
-  #   - apiVersion: gateway.networking.k8s.io/v1
-  #     kind: GatewayClass
-  #     failed: status.conditions.filter(e, e.type == 'Accepted').all(e, e.status == 'False')
-  #     inProgress: status.conditions.filter(e, e.type == 'Accepted').all(e, e.status == 'Unknown')
-  #     current: status.conditions.filter(e, e.type == 'Accepted').all(e, e.status == 'True')
   dependsOn:
     - name: core-cilium
       namespace: kube-system
-    - name: core-gateway-crds
 
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core-gateway-crds
-  namespace: &namespace network
-spec:
-  targetNamespace: *namespace
-  interval: 30m
-  retryInterval: 2m
-  timeout: 5m
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: gateway-api
-    namespace: flux-system
-
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kustomize.toolkit.fluxcd.io/kustomization_v1.json
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: core-envoy-gateway-gateways
+  name: core-envoy-gateway-gateway
   namespace: &namespace network
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: envoy-gateway-gateways
+      app.kubernetes.io/name: envoy-gateway-gateway
       app.kubernetes.io/part-of: envoy-gateway
-      app.kubernetes.io/component: gateways
+      app.kubernetes.io/component: gateway
   interval: 30m
   retryInterval: 2m
   timeout: 5m
@@ -82,32 +48,4 @@ spec:
     name: homelab
     namespace: flux-system
   dependsOn:
-    - name: core-envoy-gateway-operator
-    - name: core-envoy-gateway-certificates
-
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kustomize.toolkit.fluxcd.io/kustomization_v1.json
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: core-envoy-gateway-certificates
-  namespace: &namespace network
-spec:
-  targetNamespace: *namespace
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: envoy-gateway-certificates
-      app.kubernetes.io/part-of: envoy-gateway
-      app.kubernetes.io/component: certificates
-  interval: 30m
-  retryInterval: 2m
-  timeout: 5m
-  prune: true
-  path: ./cluster/kubernetes/core/network/envoy-gateway/certificates
-  sourceRef:
-    kind: GitRepository
-    name: homelab
-    namespace: flux-system
-  dependsOn:
-    - name: core-cert-manager
-      namespace: cert-manager
+    - name: core-envoy-gateway
