--- a/cluster/kubernetes/core/network/envoy-gateway/app/helmrelease.yaml
+++ b/cluster/kubernetes/core/network/envoy-gateway/app/helmrelease.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: envoy-gateway-operator
+  name: envoy-gateway
 spec:
   interval: 1h
   timeout: 5m
   chartRef:
     kind: OCIRepository
-    name: envoy-gateway-operator
+    name: envoy-gateway
   install:
     crds: CreateReplace
     remediation:
