--- a/cluster/kubernetes/core/flux-system/flux-instance/app/helmrelease.yaml
+++ b/cluster/kubernetes/core/flux-system/flux-instance/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
         kind: GitRepository
         url: https://github.com/stevewm/homelab.git
         ref: refs/heads/main
-        path: kubernetes/flux/cluster
+        path: kubernetes/flux
         interval: 1h
 
       kustomize:
